--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@ title: Página principal
 {% for post in paginator.posts %}
 <article>
   <h2>
-    <a href="{{ post.url }}">{{ post.title }}</a>
+    <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
     {% include share.html url=post.url %}
   </h2>
   {{ post.excerpt }}
-  <a href="{{ post.url }}">Seguir leyendo</a>
+  <a href="{{ post.url | relative_url }}">Seguir leyendo</a>
 </article>
 {% endfor %}
 
 <nav class="pagination">
   {% if paginator.previous_page %}
-  <a href="{{ paginator.previous_page_path }}">Más nuevo</a>
+  <a href="{{ paginator.previous_page_path | relative_url }}">Más nuevo</a>
   {% endif %}
 
   {% if paginator.next_page %}
-  <a href="{{ paginator.next_page_path }}">Más antiguo</a>
+  <a href="{{ paginator.next_page_path | relative_url }}">Más antiguo</a>
   {% endif %}
 </nav>
